--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{}
+{
+    "protoc": {
+        "compile_on_save": false,
+        "options": [
+            "--proto_path=${workspaceRoot}/proto",
+        ]
+    }
+}
